tests/sksl/errors/Ossfuzz38831.glsl
### Compilation failed:

error: 4: unsized arrays are not permitted here
       case 0: short[] x;
               ^^^^^^^^^
error: 5: unsized arrays are not permitted here
               int[] a = x;
               ^^^^^^^^^^^
error: 4: unsized arrays are not permitted here
       case 0: short[] x;
               ^^^^^^^^^
error: 5: unsized arrays are not permitted here
               int[] a = x;
               ^^^^^^^^^^^
4 errors
